# Slab-allocator---phil-OS

./: .gitignore  Authors.md  Cargo.toml  README.md  WRITEUP.md  lib.rs
.cargo/: config.toml
src/: allocator.rs  free_list.rs  lib.rs  main.rs  slab.rs  tests.rs  utils.rs  vga_buffer.rs
