[package]
name = "slab_allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.28"
volatile = "0.2.6"

[dependencies.spin]
version = "0.9"
default-features = false
features = ["mutex", "spin_mutex"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
test-success-exit-code = 33